# semantic_search

./: .gitignore  README.md  benchmark_config.yaml  generate_qrels.py  playground.ipynb  process_s3_files.py  pyproject.toml  qrels.jsonl  qrels2.jsonl  streamlit_app.py
data/: combined_s3_data.json
data/corpus/: news_0062854.txt  news_0062855.txt  news_0062856.txt  news_0062857.txt  news_0062858.txt  news_0062859.txt  news_0062860.txt  news_0062861.txt  news_0062862.txt  news_0062863.txt  news_0062864.txt  news_0062865.txt  news_0062866.txt  news_0062867.txt  news_0062868.txt  news_0062869.txt  news_0062870.txt  news_0062871.txt  news_0062872.txt  news_0062873.txt  news_0062874.txt  news_0062875.txt  news_0062876.txt  news_0062877.txt  news_0062878.txt  news_0062879.txt  news_0062880.txt  news_0062881.txt  news_0062882.txt  news_0062883.txt  news_0062884.txt  news_0062885.txt  news_0062887.txt  news_0062888.txt  news_0062898.txt  news_0062899.txt  news_0062900.txt  news_0062901.txt  news_0062902.txt  news_0062903.txt  (+60 more)
data/corpus/raw_json/: news_0062855.json
data/index/: bm25.pkl  chunks.jsonl  vectors.faiss
data/s3/ucdp/news_eap/: 01940955-a023-4553-8694-54ada56693b4-index.json  01940955-a023-4553-8694-54ada56693b4.json  070eb5f3-fa39-4675-8444-a71418a81ef8-index.json  070eb5f3-fa39-4675-8444-a71418a81ef8.json  0c7d46b9-fa42-4f4f-8973-b87aaf1e22ef-index.json  0c7d46b9-fa42-4f4f-8973-b87aaf1e22ef.json  0e0bd164-292f-40c9-869d-4bd01b01a913-index.json  0e0bd164-292f-40c9-869d-4bd01b01a913.json  15f50a3d-8b3c-4ce1-8bda-ae7054651d5e-index.json  15f50a3d-8b3c-4ce1-8bda-ae7054651d5e.json  19eb5fe9-db9f-456e-9dbf-6b3c71aa4d7a-index.json  19eb5fe9-db9f-456e-9dbf-6b3c71aa4d7a.json  23153b87-1a60-4cf5-8d13-e7ac77e5dbfa-index.json  23153b87-1a60-4cf5-8d13-e7ac77e5dbfa.json  39e57e00-310d-4435-9707-e61bddf2636f-index.json  39e57e00-310d-4435-9707-e61bddf2636f.json  44dd4439-5321-4976-b8a2-4e759fe9c460-index.json  44dd4439-5321-4976-b8a2-4e759fe9c460.json  4b575505-e159-438b-b83c-5a3fccccc7eb-index.json  52e3570c-93c0-40b4-baf0-071fc8d4b618-index.json  52e3570c-93c0-40b4-baf0-071fc8d4b618.json  (+40 more)
src/: server_cli.py  server_mcp_stdio.py
src/semantic_search_mcp/: __init__.py  chunker.py  config.py  dataset.py  embedders.py  indexer.py  logging_utils.py  search.py  utils.py
src/semantic_search_mcp/benchmark/: config.py  index.py  query.py  report.py  storage.py
src/semantic_search_mcp/chunkers/: __init__.py  custom_chunker.py
src/semantic_search_mcp/dataset/: local_dataset.py  s3_dataset.py
tests/: test_chunker.py
(+50 files in other folders)
